devj-playground/envs/u165622/case-02-namespace-to-namespace/target-namespace/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: net-pol-from-source-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
        matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values:
              # Erlaube den Eingang vom namespace source ('source-namespace' ist ein Platzhalter)
              - source-namespace
